--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -68,7 +68,7 @@ header nav .nav-hamburger button {
   border: 0;
   border-radius: 0;
   padding: 0;
-  background-color: var(--background-color);
+  background-color: var(--brand-primary);
   color: inherit;
   overflow: initial;
   text-overflow: initial;
