--- a/blocks/multimedia-banner/multimedia-banner.css
+++ b/blocks/multimedia-banner/multimedia-banner.css
@@ -1,8 +1,14 @@
-.video-banner {
+.multimedia-banner {
   position: relative;
 }
 
-.video-banner .play-pause-button {
+.multimedia-banner video {
+  width: 100%;
+  max-height: 750px;
+  object-fit: cover;
+}
+
+.multimedia-banner .play-pause-button {
   position: absolute;
   left: 0;
   top: 0;
@@ -16,7 +22,7 @@
 }
 
 @media (width >= 900px) {
-  .video-banner::before {
+  .multimedia-banner::before {
     content: '';
     background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.65) 100%);
     transform: rotate(180deg);
@@ -26,7 +32,7 @@
     width: 100%;
   }
 
-  .video-banner .play-pause-button {
+  .multimedia-banner .play-pause-button {
     position: absolute;
     left: 0;
     bottom: 0;
