--- a/blocks/multimedia-banner/multimedia-banner.css
+++ b/blocks/multimedia-banner/multimedia-banner.css
@@ -9,40 +9,46 @@
 }
 
 .multimedia-banner .play-pause-button {
-  position: absolute;
-  left: 0;
-  top: 0;
-  margin: 2rem 1.5rem;
-  padding: 5px 8px;
-  border-radius: 50%;
-  background-color: transparent;
-  border: 2px solid #fff;
-  font-size: 14px;
-  filter: drop-shadow(-1px 1px 4px rgba(0, 0, 0, 1.0));
+  display: none;
 }
 
-@media (width >= 900px) {
-  .multimedia-banner::before {
-    content: '';
-    background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.65) 100%);
-    transform: rotate(180deg);
-    position: absolute;
-    top: 0;
-    height: 240px;
-    width: 100%;
-  }
+/* default */
+.multimedia-banner .information {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 2rem;
+}
 
-  .multimedia-banner .play-pause-button {
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    margin: 2rem;
-    padding: 5px 8px;
-    border-radius: 50%;
-    background-color: transparent;
-    border: 2px solid #fff;
-    font-size: 14px;
-    top: unset;
-    filter: drop-shadow(-1px 1px 4px rgba(0, 0, 0, 1.0));
-  }
+/* extensions */
+.multimedia-banner .information.align-top-left {
+  top: 0;
+  left: 0;
+}
+.multimedia-banner .information.align-middle-left {
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+}
+.multimedia-banner .information.align-bottom-left {
+  bottom: 0;
+  left: 0;
+}
+.multimedia-banner .information.align-top-right {
+  top: 0;
+  right: 0;
+}
+.multimedia-banner .information.align-middle-right {
+  top: 50%;
+  right: 0;
+  transform: translateY(-50%);
+}
+.multimedia-banner .information.align-bottom-right {
+  bottom: 0;
+  right: 0;
+}
+
+
+@media (width >= 900px) {
+
 }
